src/quickcontrols/fluentwinui3/qquickfluentwinui3focusframe.cpp
@@ -21,11 +21,11 @@ QScopedPointer<QQuickItem> QQuickFluentWinUI3FocusFrame::m_focusFrame;
 QQuickFluentWinUI3FocusFrame::QQuickFluentWinUI3FocusFrame()
 {
     connect(qGuiApp, &QGuiApplication::focusObjectChanged, this, [this](QObject *focusObject){
-        if (auto control = qobject_cast<QQuickControl *>(focusObject)) {
-            if (control->focusReason() == Qt::FocusReason::TabFocusReason
-                || control->focusReason() == Qt::FocusReason::BacktabFocusReason) {
-                moveToItem(control);
-            }
+        if (QQuickControl *control = qobject_cast<QQuickControl *>(focusObject);
+            control && (control->focusReason() == Qt::FocusReason::TabFocusReason
+                    || control->focusReason() == Qt::FocusReason::BacktabFocusReason
+                    || control->focusReason() == Qt::FocusReason::OtherFocusReason)) {
+                        moveToItem(control);
         } else {
             moveToItem(nullptr);
         }
